doc/filters: add small description to geq filter section
Previously there was no description at all.

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -10121,6 +10121,8 @@ Default is @code{-1}.
 
 @section geq
 
+Apply generic equation to each pixel.
+
 The filter accepts the following options:
 
 @table @option
