--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,8 @@
 Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
+version <next>:
+
 version 4.1:
 - deblock filter
 - tmix filter
