avfilter/avf_showspectrum: add cividis colormap

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -21722,6 +21722,8 @@ each channel is displayed using the green color scheme
 each channel is displayed using the viridis color scheme
 @item plasma
 each channel is displayed using the plasma color scheme
+@item cividis
+each channel is displayed using the cividis color scheme
 @end table
 
 Default value is @samp{channel}.
@@ -21892,6 +21894,8 @@ each channel is displayed using the green color scheme
 each channel is displayed using the viridis color scheme
 @item plasma
 each channel is displayed using the plasma color scheme
+@item cividis
+each channel is displayed using the cividis color scheme
 @end table
 Default value is @samp{intensity}.
 
