--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -1217,6 +1217,16 @@ Set video stream size. This option is used only when @var{response} is enabled.
 
 @item rate
 Set video stream frame rate. This option is used only when @var{response} is enabled.
+
+@item minp
+Set minimal partition size used for convolution. Default is @var{16}.
+Allowed range is from @var{16} to @var{65536}.
+Lower values decreases latency at cost of higher CPU usage.
+
+@item maxp
+Set maximal partition size used for convolution. Default is @var{65536}.
+Allowed range is from @var{16} to @var{65536}.
+Lower values decreases latency at cost of higher CPU usage.
 @end table
 
 @subsection Examples
